force-app/main/default/objects/nFORCE__Route_Group__c/fields/Conditional_Rendering_Help_Syntax__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Rendering_Help_Syntax__c</fullName>
    <inlineHelpText>{{IF=&quot;A&quot;}}{{COND=&quot;A&quot; FIELD=&quot;LLC_BI__Loan__c.LLC_BI__Stage__c&quot; IS=&quot;Credit Underwriting&quot;}}{{SHOW_ROUTE}}{{ENDIF}}</inlineHelpText>
    <label>Conditional Rendering Help Syntax</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>