force-app/main/default/objects/nFORCE__Route_Group__c/fields/ParentRouteApp__c.field-meta.xml
<CustomField>
    <fullName>ParentRouteApp__c</fullName>
    <formula>nFORCE__Parent_Route__r.nFORCE__App__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Route - App</label>
    <type>Text</type>
</CustomField>