force-app/main/default/objects/nFORCE__Route_Group__c/fields/RouteApp__c.field-meta.xml
<CustomField>
    <fullName>RouteApp__c</fullName>
    <formula>nFORCE__Route__r.nFORCE__App__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Route - App</label>
    <type>Text</type>
</CustomField>